--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Sunil Raja Weds Jenika</title>
+<title>Selvamohan weds Selvalakshmi</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -76,7 +76,7 @@ footer {
 <p></p>
 
 <header>
-  <h2>Sunil Weds Genica</h2>
+  <h2>Selvamohan weds Selvalakshmi</h2>
 </header>
 
 <section>
@@ -90,14 +90,14 @@ footer {
   
   <article>
     <h1>Morning Wedding Venue</h1>
-    <p>KSR Kalyana Mandabam</p>
+    <p>Kappal Mahal, Rehmaniya puram</p>
     <p></p>
   </article>
 </section>
 
 <footer>
   <p>Footer</p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.17991388361!2d77.39367395088419!3d8.184623794080412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0b98bc02f4d%3A0xf6b8f583ecace4e5!2sPeruvilai+Water+Tank!5e0!3m2!1sen!2sin!4v1536433146312" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://maps.app.goo.gl/9WRA9e9vz9rZau2MA?g_st=com.google.maps.preview.copy" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </footer>
 
 </body>
