--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ footer {
 
 <footer>
   <p>Footer</p>
-  <iframe src="https://www.google.com/maps/place/Kappal+Mahal,+Kadayam+Pavoorchatram+Main+Rd,+Rahumaniyapuram,+Veikalipatty,+Tamil+Nadu+627808/@8.8708606,77.3735962,16z/data=!4m6!3m5!1s0x3b042f597173206f:0xc8cfd7" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://maps.app.goo.gl/9WRA9e9vz9rZau2MA?g_st=ic" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </footer>
 
 </body>
