--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ footer {
 
 <footer>
   <p>Footer</p>
-  <iframe src="https://maps.app.goo.gl/9WRA9e9vz9rZau2MA?g_st=ic" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.17991388361!2d77.39367395088419!3d8.184623794080412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0b98bc02f4d%3A0xf6b8f583ecace4e5!2sPeruvilai+Water+Tank!5e0!3m2!1sen!2sin!4v1536433146312" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </footer>
 
 </body>
