--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@ footer {
         height: auto;
     }
 }
+.myDiv {
+  border: 5px outset red;
+  background-color: lightgreen;    
+  text-align: center;
+}
+.myDiv2 {
+  border: 5px outset red;
+  background-color: lightpink;    
+  text-align: center;
+}
 </style>
 </head>
 <body>
@@ -76,28 +86,24 @@ footer {
 <p></p>
 
 <header>
-  <h2>Selvamohan weds Selvalakshmi</h2>
+  <h1>Selvamohan weds Selvalakshmi</h1>
 </header>
+<div>
+  <img src=image2.png width=400 hight=600/>
+</div>
 
-<section>
-  <nav>
-    <ul>
-      <li><a href="#">Morning wedding venue</a></li>
-      <li><a href="#">TIme</a></li>
-      <li><a href="#">Evening wedding venue</a></li>
-    </ul>
-  </nav>
-  
-  <article>
-    <h1>Morning Wedding Venue</h1>
-    <p>Kappal Mahal, Rehmaniya puram</p>
-    <p></p>
-  </article>
-</section>
+<div class="myDiv">
+    <h1>Marriage Venue</h1>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5107.269876692397!2d77.37102127600849!3d8.870865891442199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b042f597173206f%3A0xc8cfd77551c210b!2sKappal%20Mahal!5e1!3m2!1sen!2sin!4v1726168063276!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+<div class="myDiv2">
+    <h1>Reception Venue</h1>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2901.9855824685933!2d77.38941917547713!3d8.184615996674802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0ba9ddbab79%3A0x784e1e746a57600a!2sSt.%20Fathima%20Matha%20Church!5e1!3m2!1sen!2sin!4v1726167705795!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
+</body>
 
 <footer>
-  <p>Footer</p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.17991388361!2d77.39367395088419!3d8.184623794080412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0b98bc02f4d%3A0xf6b8f583ecace4e5!2sPeruvilai+Water+Tank!5e0!3m2!1sen!2sin!4v1536433146312" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </footer>
 
 </body>
