--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Selvamohan weds Selvalakshmi</title>
+	<head>
+<title>செல்வமோகன் செல்வலெட்சுமி</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -15,48 +15,10 @@ body {
 
 /* Style the header */
 header {
-    background-color: #ff0000;
+    background-color: LightSalmon;
     padding: 30px;
     text-align: center;
     font-size: 35px;
-    color: white;
-}
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-    float: left;
-    width: 30%;
-    height: 300px; /* only for demonstration, should be removed */
-    background: #ccc;
-    padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-article {
-    float: left;
-    padding: 20px;
-    width: 70%;
-    background-color: #f1f1f1;
-    height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Style the footer */
-footer {
-    background-color: #777;
-    padding: 10px;
-    text-align: center;
     color: white;
 }
 
@@ -78,6 +40,7 @@ footer {
   text-align: center;
 }
 </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -86,7 +49,7 @@ footer {
 <p></p>
 
 <header>
-  <h1>Selvamohan weds Selvalakshmi</h1>
+  <h1>செல்வமோகன் செல்வலெட்சுமி</h1>
 </header>
 <div>
   <img src=image2.png width=400 hight=600/>
