--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 <title>செல்வமோகன் செல்வலெட்சுமி</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
     box-sizing: border-box;
@@ -18,8 +18,7 @@ header {
     background-color: LightSalmon;
     padding: 30px;
     text-align: center;
-    font-size: 35px;
-    color: white;
+    color: MediumVioletRed;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -40,13 +39,8 @@ header {
   text-align: center;
 }
 </style>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-<h2></h2>
-<p></p>
-<p></p>
 
 <header>
   <h1>செல்வமோகன் செல்வலெட்சுமி</h1>
@@ -57,11 +51,11 @@ header {
 
 <div class="myDiv">
     <h1>Marriage Venue</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5107.269876692397!2d77.37102127600849!3d8.870865891442199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b042f597173206f%3A0xc8cfd77551c210b!2sKappal%20Mahal!5e1!3m2!1sen!2sin!4v1726168063276!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5107.269876692397!2d77.37102127600849!3d8.870865891442199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b042f597173206f%3A0xc8cfd77551c210b!2sKappal%20Mahal!5e1!3m2!1sen!2sin!4v1726168063276!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 <div class="myDiv2">
     <h1>Reception Venue</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2901.9855824685933!2d77.38941917547713!3d8.184615996674802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0ba9ddbab79%3A0x784e1e746a57600a!2sSt.%20Fathima%20Matha%20Church!5e1!3m2!1sen!2sin!4v1726167705795!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2901.9855824685933!2d77.38941917547713!3d8.184615996674802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0ba9ddbab79%3A0x784e1e746a57600a!2sSt.%20Fathima%20Matha%20Church!5e1!3m2!1sen!2sin!4v1726167705795!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 </body>
