--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+	width: 100%
 }
 
 /* Style the header */
@@ -46,7 +47,7 @@ header {
   <h1>செல்வமோகன் செல்வலெட்சுமி</h1>
 </header>
 <div>
-  <img src=image2.png width=400 hight=600/>
+  <img src=image2.png width=100% hight=600/>
 </div>
 
 <div class="myDiv">
