--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
 <title>செல்வமோகன் செல்வலெட்சுமி</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,7 @@ header {
     background-color: LightSalmon;
     padding: 30px;
     text-align: center;
+    font-size: 4vw;
     color: MediumVioletRed;
 }
 
