--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ header {
     background-color: LightSalmon;
     padding: 30px;
     text-align: center;
-    font-size: 4vw;
     color: MediumVioletRed;
 }
 
@@ -34,30 +33,41 @@ header {
   border: 5px outset red;
   background-color: lightgreen;    
   text-align: center;
+  color: MediumVioletRed;
 }
 .myDiv2 {
   border: 5px outset red;
   background-color: lightpink;    
   text-align: center;
+  color: MediumVioletRed;
 }
 </style>
 </head>
 <body>
 
 <header>
-  <h1>செல்வமோகன் செல்வலெட்சுமி</h1>
+<div>
+  <h1>மன்றல் அழைப்பிதழ்</h1>
+  <h2>மணமக்கள்:</h2>
+  <h2>செல்வமோகன் (எ) சுபாஷ் ராஜா</h2>
+  <h2>செல்வலெட்சுமி</h2>
+<div>
 </header>
 <div>
   <img src=image2.png width=100% hight=600/>
 </div>
 
 <div class="myDiv">
-    <h1>Marriage Venue: Kappal Mahal [Sunday, 15-09-2024]</h1>
+    <h1>Marriage Venue:</h1>
+    <h1>Kappal Mahal</h1>
+    <h1>[Sunday, 15-09-2024]</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5107.269876692397!2d77.37102127600849!3d8.870865891442199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b042f597173206f%3A0xc8cfd77551c210b!2sKappal%20Mahal!5e1!3m2!1sen!2sin!4v1726168063276!5m2!1sen!2sin" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 <div class="myDiv2">
-    <h1>Reception Venue: St.Fathima Madha Community Hall [Monday, 16-09-2024]</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2901.9855824685933!2d77.38941917547713!3d8.184615996674802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0ba9ddbab79%3A0x784e1e746a57600a!2sSt.%20Fathima%20Matha%20Church!5e1!3m2!1sen!2sin!4v1726167705795!5m2!1sen!2sin" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h1>Reception Venue:</h1>
+    <h1>St.Fathima Madha Community Hall</h1>
+    <h1>[Monday, 16-09-2024]</h1>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2901.9855824685933!2d77.38941917547713!3d8.184615996674802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04f0ba9ddbab79%3A0x784e1e746a57600a!2sSt.%20Fathima%20Matha%20Church!5e1!3m2!1sen!2sin!4v1726167705795!5m2!1sen!2sin" width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 </body>
